feat(be): swagger init
